# pandoc-latex-pagebreak

./: LICENSE  README.md  pandoc-latex-pagebreak.cabal
src/: Main.hs
src/Text/Pandoc/Filters/: PageBreak.hs
