name:                pandoc-latex-pagebreak
version:             1.0.0
license:             BSD3
license-file:        LICENSE
maintainer:          mhalairt@gmail.com
author:              Mikhalev Oleg
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable pandoc-latex-pagebreak
  main-is:             Main.hs
  other-modules:       Text.Pandoc.Filters.PageBreak
  build-depends:       base >=4.12 && <4.13, pandoc-types >= 1.22, text
  hs-source-dirs:      src
  default-language:    Haskell2010
